@@ -164,7 +164,6 @@ extern bool blocks_overlap(bg_record_t *rec_a, bg_record_t *rec_b)
 			return true;
 	}
 
-
 	if (!bit_overlap(rec_a->bitmap, rec_b->bitmap))
 		return false;
 
